Fixed scrolling on mobile

--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 html {
-	font-size: 62.5%;
+  font-size: 62.5%;
 }
 
 main {
-	font-family: 'Yusei Magic', sans-serif;
-	font-size: 2rem;
-	text-align: center;
-	color: #c45cb3;
+  font-family: 'Yusei Magic', sans-serif;
+  font-size: 2rem;
+  text-align: center;
+  color: #c45cb3;
 }
 
 /*********************
@@ -14,146 +14,152 @@ main {
 *********************/
 
 fieldset {
-	display: flex;
-	flex-flow: row wrap;
-	justify-content: center;
-	border: none;
-	font-size: 2rem;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  border: none;
+  font-size: 2rem;
 }
 
-fieldset div{ /*checkbox+label combos*/
-	margin: 1rem;
-	cursor: pointer;
-	
-	display: flex;
-	flex-flow: row nowrap;
-	align-items: center;
+fieldset div {
+  /*checkbox+label combos*/
+  margin: 1rem;
+  cursor: pointer;
+
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: center;
 }
 
-input[type="checkbox"],label{
-	cursor: pointer;
-	accent-color: #c45cb3;
+input[type='checkbox'],
+label {
+  cursor: pointer;
+  accent-color: #c45cb3;
 }
 
-input[type="checkbox"]{
-	transform: scale(1.2);
-	margin-right: .7rem;
+input[type='checkbox'] {
+  transform: scale(1.2);
+  margin-right: 0.7rem;
 }
 
-input[type="checkbox"]:focus + label,
-input[type="checkbox"]:hover + label {
-	accent-color: #b345a0;
-	color: #b345a0;
+input[type='checkbox']:focus + label,
+input[type='checkbox']:hover + label {
+  accent-color: #b345a0;
+  color: #b345a0;
 }
 
-input[type="checkbox"]:focus,
-input[type="checkbox"]:hover {
-	outline: .15rem solid #964688;
-	accent-color: #b345a0;
-	color: #b345a0;
+input[type='checkbox']:focus,
+input[type='checkbox']:hover {
+  outline: 0.15rem solid #964688;
+  accent-color: #b345a0;
+  color: #b345a0;
 }
 
 label {
-	margin-right: 1rem;
+  margin-right: 1rem;
 }
 
 /**************
  Submit Button
 ***************/
-input[type="submit"] {
-	font-family: 'Yusei Magic', sans-serif;
-	color: white;
+input[type='submit'] {
+  font-family: 'Yusei Magic', sans-serif;
+  color: white;
 
-	width: 10rem;
-	margin: 1em auto;
-	cursor: pointer;
+  width: 10rem;
+  margin: 1em auto;
+  cursor: pointer;
 
-	font-size: 3rem;
-	border-radius: .5rem;
+  font-size: 3rem;
+  border-radius: 0.5rem;
 
-	background-color: #c45cb3;
-	border: .1rem solid #c45cb3;
+  background-color: #c45cb3;
+  border: 0.1rem solid #c45cb3;
 
-	display: flex;
-	flex-flow: row wrap;
-	justify-content: center;
-	align-items: center;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  align-items: center;
 }
 
-input[type="submit"]:focus,
-input[type="submit"]:hover {
-	outline: .2rem solid #964688;
-	color: #ffeefc;
-	background-color: #b345a0;
+input[type='submit']:focus,
+input[type='submit']:hover {
+  outline: 0.2rem solid #964688;
+  color: #ffeefc;
+  background-color: #b345a0;
 }
 
-input[type="submit"]:active {
-	outline: .15rem solid #964688;
-	transform: scale(.97);
+input[type='submit']:active {
+  outline: 0.15rem solid #964688;
+  transform: scale(0.97);
 }
 
 /****************************
  Section that displays cards
 *****************************/
 .cards div {
-	width: 50vw;
-	padding: 3rem;
-	border: .1rem solid #c45cb3;
-	border-radius: .5rem;
-	background-color: #fae6f7;
-	color: #c45cb3;
-	cursor: pointer;
-	margin: auto;
+  width: 50vw;
+  padding: 3rem;
+  border: 0.1rem solid #c45cb3;
+  border-radius: 0.5rem;
+  background-color: #fae6f7;
+  color: #c45cb3;
+  cursor: pointer;
+  margin: auto;
 
-	display: flex;
-	flex-flow: column wrap;
-	align-items: start;
+  display: flex;
+  flex-flow: column wrap;
+  align-items: start;
 }
 
 .cards div p {
-	text-align: left;
+  text-align: left;
 }
 
 .cards div h2 {
-	margin-top: 0;
+  margin-top: 0;
 }
 
 .cards div:focus,
 .cards div:hover {
-	outline: .15rem solid #c45cb3;
-	background-color: #ffe4fa;
+  outline: 0.15rem solid #c45cb3;
+  background-color: #ffe4fa;
 }
 
 .cards div img,
 .cards div h2 {
-	align-self: center;
+  align-self: center;
 }
 
 .cards .hide {
-	display: none;
+  display: none;
 }
 
 .cards .reverse {
-	transform: scaleY(-1);
+  transform: scaleY(-1);
 }
 
 .cards img {
-	width: 12vw;
-	-moz-box-shadow: .1rem .2rem .3rem rgba(0,0,0,.5);
-	-webkit-box-shadow: .1rem .2rem .3rem rgba(0,0,0,.5);
-	box-shadow: .1rem .2rem .3rem rgba(0,0,0,.5);
-	border-radius: .3rem;
+  width: 12vw;
+  -moz-box-shadow: 0.1rem 0.2rem 0.3rem rgba(0, 0, 0, 0.5);
+  -webkit-box-shadow: 0.1rem 0.2rem 0.3rem rgba(0, 0, 0, 0.5);
+  box-shadow: 0.1rem 0.2rem 0.3rem rgba(0, 0, 0, 0.5);
+  border-radius: 0.3rem;
+}
+
+#spacing {
+  height: 100px;
 }
 
 /***********************
  Mobile/Tablet Settings
 ***********************/
 @media only all and (max-width: 800px) {
-	div {
-		width: 80vw;
-	}
+  div {
+    width: 80vw;
+  }
 
-	img {
-		width: 30vw;
-	}
+  img {
+    width: 30vw;
+  }
 }
